# vrom911.github.io

./: .travis.yml  README.md  about.html  atom.xml  blog.html  cabal.project  cabal.project.freeze  hobbies.html  index.html  keybase.txt  projects.html  rss.xml  site.hs  website.cabal
.github/workflows/: ci.yml
blog/: 2019-02-14-this-site.html  2019-02-14-this-site.md  2019-03-06-website-is-not-easy.md  2019-03-20-write-yourself-a-lens.md  2020-01-12-common-stanzas.md  2020-06-09-html-libraries.md  2020-07-17-github-actions-releases.md  2020-09-25-haskell-aliases.md  common-stanzas.html  github-actions-releases.html  haskell-aliases.html  html-libraries.html  website-is-not-easy.html  write-yourself-a-lens.html
css/: about.css  blog.css  button.css  default.css  error404.css  frame.css  highlight-theme.css  main.css  normalize.css  post.css
fonts/PoiretOneNormal/: PoiretOneNormal.eot
fonts/poiret/: poiret-one-v7-latin-regular.eot
hobbies/: art.html  travel.html
images/: screen-0001.tif
js/: about.js  artgallery.js  load.js  main.js
pde/: backgr.pjs  backgr1.pde  backgr_about.pde  coming.pde  daisy.pde  error404.pde  hearts.pde  house.pde  ico.pjs  kitty.pjs  logo.pde  nav_all.pde  navblock1.pde  navblock2.pde  navblock3.pde  navblock4.pde  nestedloop.pde  pythagorean.pde  stroke.pde  triangles.pde  triangles_volume.pde  uzor.pde  uzor_base.pde  uzorsub.pde
scripts/: deploy.sh
scss/: custom.scss
src/: Website.hs
src/Website/: Blog.hs  Context.hs  Experience.hs  Feed.hs  Hobbies.hs  Nav.hs  Project.hs  Social.hs
tags/: build tools.html  build-tools.html  cabal.html  dhall.html  github-actions.html  github.html  hakyll.html  haskell.html  html.html  lens.html  library.html  processing.html  stack.html  tutorial.html  web.html
templates/: 404.html  about.html  about_page.html  artgallery_page.html  blog.html  decoder_page.html  default.html  footer.html  hobbies.html  index.html  info.html  main.html  map.html  new.html  newart_page.html  post.html  projects.html  projects_page.html  social.html
templates/hobbies/: art.html  travel.html
