cabal-version:       2.0
name:                vrom911-website
version:             0.0.0.0
synopsis:            My personal website and blog
description:         My personal website and blog
homepage:            https://github.com/vrom911/vrom911.github.io
bug-reports:         https://github.com/vrom911/vrom911.github.io/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          vrom911@gmail.com
copyright:           2019 vrom911
category:            Website
build-type:          Simple
stability:           stable
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.3

source-repository head
  type:     git
  location: git@github.com:vrom911/vrom911.github.io.git

library
  hs-source-dirs:      src
  exposed-modules:     Website
                         Website.Blog
                         Website.Context
                         Website.Experience
                         Website.Hobbies
                         Website.Nav
                         Website.Project
                         Website.Social
  build-depends:       base ^>= 4.12
                     , filepath ^>= 1.4
                     , hakyll ^>= 4.12
                     , hakyll-shortcut-links ^>= 0.0.0.0
                     , pandoc >= 2.6
                     , text

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

  default-language:    Haskell2010

executable site
  main-is:             site.hs

  build-depends:       base
                     , vrom911-website

  ghc-options:         -Wall -threaded

  default-language:    Haskell2010
